@@ -26,8 +26,8 @@ ELSE (ZLIB_FOUND) # not found
     # Try to build it
     message("We will build Z lib from thirdparty")
     ADD_SUBDIRECTORY(libz)
-    SET(Z_LIBNAME ${ZLIB_LIBRARIES} PARENT_SCOPE)
-    SET(Z_INCLUDE_DIRNAME ${ZLIB_INCLUDE_DIRS} PARENT_SCOPE)
+    SET(Z_LIBNAME z PARENT_SCOPE)
+    SET(Z_INCLUDE_DIRNAME ${OPENJPEG_SOURCE_DIR}/thirdparty/include PARENT_SCOPE)
     SET(ZLIB_FOUND 1)
   ELSE (BUILD_THIRDPARTY)
     message("Z lib not found, activate BUILD_THIRDPARTY if you want build it (necessary to build libPNG)")
@@ -56,8 +56,8 @@ IF (ZLIB_FOUND)
       ADD_SUBDIRECTORY(libpng)
       SET(HAVE_PNG_H 1 PARENT_SCOPE)
       SET(HAVE_LIBPNG 1 PARENT_SCOPE)
-      SET(PNG_LIBNAME ${PNG_LIBRARIES} PARENT_SCOPE)
-      SET(PNG_INCLUDE_DIRNAME ${PNG_INCLUDE_DIR} PARENT_SCOPE)
+      SET(PNG_LIBNAME png PARENT_SCOPE)
+      SET(PNG_INCLUDE_DIRNAME ${OPENJPEG_SOURCE_DIR}/thirdparty/libpng PARENT_SCOPE)
     ELSE (BUILD_THIRDPARTY)
       SET(HAVE_PNG_H 0 PARENT_SCOPE)
       SET(HAVE_LIBPNG 0 PARENT_SCOPE)
@@ -85,8 +85,8 @@ ELSE (TIFF_FOUND) # not found
     # Try to build it
     message("We will build TIFF lib from thirdparty")
     ADD_SUBDIRECTORY(libtiff)
-    SET(TIFF_LIBNAME ${TIFF_LIBRARIES} PARENT_SCOPE)
-    SET(TIFF_INCLUDE_DIRNAME ${TIFF_INCLUDE_DIR} PARENT_SCOPE)
+    SET(TIFF_LIBNAME tiff PARENT_SCOPE)
+    SET(TIFF_INCLUDE_DIRNAME ${OPENJPEG_SOURCE_DIR}/thirdparty/libtiff PARENT_SCOPE)
     SET(HAVE_TIFF_H 1 PARENT_SCOPE)
     SET(HAVE_LIBTIFF 1 PARENT_SCOPE)
   ELSE (BUILD_THIRDPARTY)
@@ -130,7 +130,7 @@ ELSE (LCMS2_FOUND) # not found lcms2
       # Try to build lcms2
       message("We will build LCMS2 lib from thirdparty")
       ADD_SUBDIRECTORY(liblcms2)
-      SET(LCMS_LIBNAME "lcms2" PARENT_SCOPE)
+      SET(LCMS_LIBNAME lcms2 PARENT_SCOPE)
       SET(LCMS_INCLUDE_DIRNAME ${OPENJPEG_SOURCE_DIR}/thirdparty/liblcms2/include PARENT_SCOPE) #
       SET(HAVE_LCMS2_H 1 PARENT_SCOPE)
       SET(HAVE_LIBLCMS2 1 PARENT_SCOPE)
