@@ -39,7 +39,6 @@ SET(TARGET_FILES
     tif_predict.h
     tif_print.c
     tif_read.c
-    tif_stream.cxx
     tif_strip.c
     tif_swab.c
     tif_thunder.c
